#44: pause and resume speech synthesis

--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -23,9 +23,9 @@
   </app-controls-item>
 
   <app-controls-item
-    (click)="paused = true"
+    (click)="pause()"
     ngbTooltip="Pause"
-    [class.disabled]="endSessionLoading"
+    [class.disabled]="isHighlighted()"
     *ngIf="!paused"
   >
     <img
@@ -36,9 +36,9 @@
   </app-controls-item>
 
   <app-controls-item
-    (click)="paused = false"
+    (click)="resume()"
     ngbTooltip="Abspielen"
-    [class.disabled]="endSessionLoading"
+    [class.disabled]="isHighlighted()"
     *ngIf="paused"
   >
     <img
