--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal.component.html
@@ -22,5 +22,5 @@
       </ng-container>
     </div>
   </div>
-  <app-rehearsal-controls @fixedAppear (readLine)="readLine()" (pauseRead)="pauseRead()" (resumeRead)="resumeRead()"></app-rehearsal-controls>
+  <app-rehearsal-controls @fixedAppear (readLine)="speakLine()" (pauseRead)="pauseSpeak()" (resumeRead)="resumeSpeak()"></app-rehearsal-controls>
 </ng-template>
