--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.html
@@ -1,13 +1,18 @@
 <div #content class="content pb-5">
   <div class="role-names">
     <span
-      class="name"
       *ngFor="let role of line.roles"
       [class.is-highlighted]="role.name === session.role?.name"
-      >{{ role.name }}</span
+      class="name"
+    >{{ role.name }}</span
     >
   </div>
-  <p class="mb-0">
+  <p
+    *ngFor="let role of line.roles"
+    [class.is-Blurred]="isBlurred"
+    [class.is-currentText]="role.name === session.role?.name"
+    class="mb-0"
+  >
     {{ line.content }}
   </p>
 </div>
