#36: changes in modal and routing for rehearsal

--- a/frontend/src/app/modules/shared/components/modal/modal.component.html
+++ b/frontend/src/app/modules/shared/components/modal/modal.component.html
@@ -16,6 +16,14 @@
     Abbrechen
   </button>
   <app-button
+    (click)="onContinue()"
+    *ngIf="showContinue"
+    [disabled]="disabled"
+    [label]="'Fortsetzen'"
+    [loading]="loading"
+    [theme]="theme"
+  ></app-button>
+  <app-button
     (click)="onConfirm()"
     [disabled]="disabled"
     [label]="confirmBtnLabel || 'Ok'"
