#43: add css class for conflict lines

--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.html
@@ -24,6 +24,7 @@
       [class.highlighted]="
         isHighlighted(scriptViewerService.$selectedRole | async)
       "
+      [class.conflict]="isConflict()"
       [class.text-secondary]="isInstruction"
       class="w-100"
       ngbDropdownToggle
