--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
@@ -61,6 +61,12 @@ p {
   &.highlighted {
     background-color: rgba(228 206 7 / 20%);
   }
+
+  &.conflict {
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-decoration-style: wavy;
+  }
 }
 
 .scroll-anchor {
