--- a/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-viewer/script-line/script-line.component.scss
@@ -64,8 +64,15 @@ p {
 
   &.conflict {
     text-decoration: underline;
-    text-decoration-color: red;
-    text-decoration-style: wavy;
+    text-decoration-thickness: 2px;
+
+    &.conflict-error {
+      text-decoration-color: var(--bs-danger);
+    }
+
+    &.conflict-warning {
+      text-decoration-color: var(--bs-warning);
+    }
   }
 }
 
