--- a/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
@@ -28,8 +28,16 @@
         type="text"
       />
       <app-script-conflicts
+        [ngbTooltip]="'Springe zum Problem'"
+        placement="left top bottom"
         [script]="script"
         type="error"
+      ></app-script-conflicts>
+      <app-script-conflicts
+        [ngbTooltip]="'Springe zum Problem'"
+        placement="left top bottom"
+        [script]="script"
+        type="warning"
       ></app-script-conflicts>
       <app-form-errors>
         <app-form-error *ngIf="fieldHasErrors('scriptName', 'required')"
@@ -40,10 +48,6 @@
         </app-form-error>
       </app-form-errors>
     </div>
-    <app-script-conflicts
-      [script]="script"
-      type="warning"
-    ></app-script-conflicts>
     <div class="form-group mb-3">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <h3 class="mb-0">Rollen</h3>
