--- a/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-editor/script-editor.component.html
@@ -37,21 +37,23 @@
       </app-form-errors>
     </div>
     <div *ngIf="isUploading" class="form-group mb-4">
-      <h3 class="mb-0">Überprüfungen</h3>
+      <h3 *ngIf="isDisplayingConflictHeader" class="mb-0">Überprüfungen</h3>
       <app-script-conflicts
         type="error"
         [ngbTooltip]="'Springe zum Problem'"
+        (countChange)="counts[0] = $event; updateShouldDisplayConflictHeader();"
         placement="left top bottom"
         formControlName="errorCount"
       ></app-script-conflicts>
       <app-script-conflicts
         type="warning"
         [ngbTooltip]="'Springe zum Problem'"
+        (countChange)="counts[1] = $event; updateShouldDisplayConflictHeader();"
         placement="left top bottom"
       ></app-script-conflicts>
       <app-form-errors>
         <app-form-error *ngIf="fieldHasErrors('errorCount', 'max')"
-        >Notwendige Überprüfungen müsse abgearbeitet werden.
+        >Notwendige Überprüfungen müssen abgearbeitet werden.
         </app-form-error>
       </app-form-errors>
     </div>
