#43: merge from develop

--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-line/rehearsal-line.component.html
@@ -7,7 +7,12 @@
     >{{ role.name }}</span
     >
   </div>
-  <p class="mb-0">
+  <p
+    *ngFor="let role of line.roles"
+    [class.is-Blurred]="isBlurred"
+    [class.is-currentText]="role.name === session.role?.name"
+    class="mb-0"
+  >
     {{ line.content }}
   </p>
 </div>
