--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -46,8 +46,26 @@
   >
     <bi name="x-lg"></bi>
   </app-controls-item>
-  <app-controls-item [class.disabled]="true || endSessionLoading">
-    <bi name="three-dots"></bi>
+  <app-controls-item><!--[class.disabled]="true || endSessionLoading"-->
+
+
+    <div dropdownClass="dropdown-menu-lg" ngbDropdown>
+      <bi name="three-dots" ngbDropdownToggle></bi>
+      <div class="blur-text-dropdown-menu" ngbDropdownMenu>
+        <div class="form-check form-switch">
+          <input (click)="blur()" class="form-check-input" id="flexSwitchCheckDefault" role="switch" type="checkbox">
+          <label class="form-check-label text-nowrap" for="flexSwitchCheckDefault">Text ausblenden</label>
+        </div>
+        <label class="form-check-label text-nowrap" for="flexSwitchCheckDefault">Textsprache</label>
+        <select class="form-control" [(ngModel)]="lang" (click)="updateLang()">
+          <option value="de">Deutsch</option>
+          <option value="en-US">Englisch</option>
+          <option value="fr-FR">Französisch</option>
+          <option value="it-IT">Italienisch</option>
+          <option value="es-ES">Spanisch</option>
+        </select>
+      </div>
+    </div>
   </app-controls-item>
 </app-controls>
 <ng-template #stopSessionModal let-modal>
