#38: fix many recording issues and save recordings (locally)

--- a/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.scss
@@ -1,3 +1,14 @@
 .assessmentButton {
   font-size: large;
 }
+
+strong {
+  font-weight: 600;
+}
+
+.toggle-save-recordings {
+  input,
+  label {
+    cursor: pointer;
+  }
+}
