--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -102,7 +102,10 @@ label {
 
 bi {
   transition: color 200ms ease-in-out;
-  color: var(--bs-dark);
+
+  &:not(.light) {
+    color: var(--bs-dark);
+  }
 
   &.smaller {
     transform: scale(0.9);
