--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -94,43 +94,64 @@ label {
   }
 }
 
+.pulsing * {
+  animation: pulsing;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+}
+
+bi {
+  transition: color 200ms ease-in-out;
+
+  &:not(.light) {
+    color: var(--bs-dark);
+  }
+
+  &.smaller {
+    transform: scale(0.9);
+  }
+
+  &.bi-inline {
+    display: inline;
+
+    svg {
+      transform: translateY(-1px);
+    }
+
+    &:not(.bi-inline-smaller) svg {
+      width: 1.5rem;
+    }
+
+    &.bi-inline-smaller svg {
+      width: 1.2rem;
+    }
+  }
+
+  &:not(.bi-inline) {
+    svg {
+      width: 1.9rem;
+    }
+  }
+}
+
+@keyframes pulsing {
+  0% {
+    color: var(--bs-dark);
+  }
+  50% {
+    color: var(--bs-danger);
+  }
+  100% {
+    color: var(--bs-dark);
+  }
+}
+
 app-controls app-controls-item {
   &:not(.disabled):hover bi {
     color: var(--bs-primary) !important;
   }
 
-  &.pulsing bi {
-    animation: pulsing;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-  }
-
   img.icon {
     height: 1.5rem;
-  }
-
-  bi {
-    transition: color 200ms ease-in-out;
-    color: var(--bs-dark);
-
-    &.smaller {
-      transform: scale(0.9);
-    }
-
-    svg {
-      width: 1.9rem;
-    }
-  }
-
-  @keyframes pulsing {
-    0% {
-      color: var(--bs-dark);
-    }
-    50% {
-      color: var(--bs-danger);
-    }
-    100% {
-      color: var(--bs-dark);
-    }
   }
 }
