--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -2,10 +2,10 @@
   <app-controls-item
     (click)="toggleRecordingMode()"
     *ngIf="voiceRecordingService.isSupported()"
+    [class.disabled]="endSessionLoading"
     [ngbTooltip]="
       this.isRecordingMode ? 'Aufzeichnungen abbrechen' : 'Text einsprechen'
     "
-    [class.disabled]="endSessionLoading"
   >
     <bi
       *ngIf="isRecordingMode; else notRecording"
@@ -18,8 +18,8 @@
   </app-controls-item>
   <app-controls-item
     (click)="speakingPaused ? resumeSpeaking() : pauseSpeaking()"
-    [ngbTooltip]="speakingPaused ? 'Abspielen' : 'Pause'"
     [class.disabled]="isSelectedRoleSpeaking"
+    [ngbTooltip]="speakingPaused ? 'Abspielen' : 'Pause'"
   >
     <bi *ngIf="!speakingPaused" name="pause-fill"></bi>
     <bi *ngIf="speakingPaused" name="play-fill"></bi>
@@ -46,7 +46,7 @@
     <bi name="x-lg"></bi>
   </app-controls-item>
   <app-controls-item
-    ><!--[class.disabled]="true || endSessionLoading"-->
+  ><!--[class.disabled]="true || endSessionLoading"-->
     <div dropdownClass="dropdown-menu-lg" ngbDropdown>
       <bi name="three-dots" ngbDropdownToggle></bi>
       <div class="blur-text-dropdown-menu" ngbDropdownMenu>
@@ -61,13 +61,13 @@
           <label
             class="form-check-label text-nowrap"
             for="flexSwitchCheckDefault"
-            >Text ausblenden</label
+          >Text ausblenden</label
           >
         </div>
         <label class="form-check-label text-nowrap" for="flexSwitchCheckDefault"
-          >Textsprache</label
+        >Textsprache</label
         >
-        <select class="form-control" [(ngModel)]="lang" (click)="updateLang()">
+        <select (click)="updateLang()" [(ngModel)]="lang" class="form-control">
           <option value="de">Deutsch</option>
           <option value="en-US">Englisch</option>
           <option value="fr-FR">Französisch</option>
@@ -94,6 +94,6 @@
      >-->
     Sicher, dass du diese
     <strong class="text-primary"> Übungseinheit vorläufig beenden</strong>
-    möchtest?<br />
+    möchtest?<br/>
   </app-modal>
 </ng-template>
