--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-list.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-list.component.html
@@ -5,5 +5,6 @@
     [member]="member"
     [isOwner]="isOwner"
     [owner]="members[0]"
+    (removedEmitter)="remove($event)"
   ></app-script-members-item>
 </div>
