--- a/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.html
@@ -58,6 +58,14 @@
       *ngIf="recordedLines.length > 0"
       class="form-group toggle-save-recordings"
     >
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <label class="ms-2 form-check-label" for="playRecording">Eingesprochenen Text abspielen</label>
+        <button (click)="playRecording()" [ngbTooltip]="'Abspielen'" class="bg-transparent border-0 d-flex"
+                id="playRecording"
+                type="button">
+          <bi name="play-fill"></bi>
+        </button>
+      </div>
       <input
         class="form-check-input"
         formControlName="shouldSaveRecordings"
