--- a/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-review/script-review.component.html
@@ -60,10 +60,11 @@
     >
       <div class="d-flex justify-content-between align-items-center mb-3">
         <label class="ms-2 form-check-label" for="playRecording">Eingesprochenen Text abspielen</label>
-        <button (click)="playRecording()" [ngbTooltip]="'Abspielen'" class="bg-transparent border-0 d-flex"
-                id="playRecording"
-                type="button">
-          <bi name="play-fill"></bi>
+        <button (click)="playRecording()" [class.disabledButton]="isPlayingLines" [ngbTooltip]="'Abspielen'"
+                class="bg-transparent border-0 d-flex"
+                id="playRecording" type="button">
+          <bi *ngIf="!isPlayingLines" name="play-fill"></bi>
+          <bi *ngIf="isPlayingLines" name="pause-fill"></bi>
         </button>
       </div>
       <input
