#75: mobile view for login, registration, invite member, landing page and rehearsal

--- a/frontend/src/app/modules/features/landing/landing.component.scss
+++ b/frontend/src/app/modules/features/landing/landing.component.scss
@@ -1,3 +1,10 @@
 .jumbotron {
   background: none;
 }
+
+@media screen and (max-width: 400px) {
+  .btn.btn-primary.btn-lg.me-3 {
+    width:100%;
+    margin-bottom: 1em;
+  }
+}
