--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.html
@@ -14,7 +14,7 @@
             class="nav-link"
             routerLink="/scripts"
             routerLinkActive="active"
-          >Deine Skripte
+          >Skripte
           </a>
         </li>
         <li class="nav-item">
@@ -92,7 +92,7 @@
   <main
     (scroll)="onScrollMain($event)"
     [class.is-dark-theme]="theme === 'dark'"
-    class="w-100 p-5 d-flex flex-column"
+    class="w-100 p5 d-flex flex-column"
   >
     <!--
       Additonal wrapper, as 'max-width' cannot be applied on 'main'.
