--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
@@ -92,3 +92,16 @@ ul {
 bi {
   height: 2rem;
 }
+
+.p5 {
+  padding: 3rem;
+  padding-left: 4rem;
+  margin:0;
+}
+
+@media screen and (max-width: 600px) {
+  .p5 {
+    padding-right: 0.8rem;
+    padding-left: 1.8rem;
+  }
+}
