--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-item/script-members-item.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-members-list/script-members-item/script-members-item.component.scss
@@ -12,3 +12,29 @@
     box-shadow: 0 8px 17px 0 rgb(0 0 0 / 8%);
   }
 }
+
+@media screen and (max-width: 740px) {
+  h5 {
+    font-size: 1rem;
+  }
+
+  .card {
+    width: 8rem;
+    height: 8rem;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  h5 {
+    font-size: 1rem;
+  }
+
+  .card-img {
+    height: 4rem;
+  }
+
+  .card {
+    width: calc(100vw - 4rem);
+    height: 5rem;
+  }
+}
