--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.scss
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/script-rehearsal-sections/script-rehearsal-sections.component.scss
@@ -5,3 +5,17 @@
     white-space: break-spaces;
   }
 }
+
+.infotext {
+  display: none;
+}
+
+@media screen and (max-width: 858px) {
+  .create {
+    display: none;
+  }
+
+  .infotext {
+    display: block;
+  }
+}
