--- a/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
+++ b/frontend/src/app/modules/shared/components/page-layout/page-layout.component.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@media screen and (max-width: 858px) {
+  :host {
+    --sidebar-width: 100%;
+  }
+}
+
 :host > .wrapper,
 header,
 footer {
@@ -103,5 +109,19 @@ bi {
   .p5 {
     padding-right: 0.8rem;
     padding-left: 1.8rem;
+  }
+}
+
+.compact {
+  display: none;
+}
+
+@media screen and (max-width: 520px) {
+  .compact {
+    display: block;
+  }
+
+  .normal {
+    display: none;
   }
 }
