--- a/frontend/src/app/modules/features/profile/profile.component.scss
+++ b/frontend/src/app/modules/features/profile/profile.component.scss
@@ -1,3 +1,32 @@
 span.value {
   font-size: 1.3em;
 }
+
+.profileData {
+  gap: 3rem;
+}
+
+@media screen and (max-width: 740px) {
+  span.value {
+    font-size: 1em;
+  }
+
+  h3 {
+    font-size: 1.2em;
+  }
+
+  .profileData {
+    gap: 1rem;
+  }
+}
+
+
+@media screen and (max-width: 400px) {
+  .profileData {
+    flex-direction: column;
+  }
+
+  .options {
+    flex-direction: column;
+  }
+}
