#70: removed commented out code

--- a/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-rehearsal/rehearsal-controls/rehearsal-controls.component.html
@@ -45,8 +45,7 @@
   >
     <bi name="x-lg"></bi>
   </app-controls-item>
-  <app-controls-item
-  ><!--[class.disabled]="true || endSessionLoading"-->
+  <app-controls-item>
     <div dropdownClass="dropdown-menu-lg" ngbDropdown>
       <bi name="three-dots" ngbDropdownToggle></bi>
       <div class="blur-text-dropdown-menu" ngbDropdownMenu>
